--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,26 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Lasagna">
+        <h2>Description</h2>
+        <p>This is the lasagna recipe I learned on YouTube. It is the easiest and tastiest recipe for a quick lasagna.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Ground beef</li>
+            <li>Tomato sauce</li>
+            <li>Mozzarella</li>
+            <li>Béchamel</li>
+            <li>Grated parmesan</li>
+            <li>Lasagna pasta</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
     </body>
 </html>
