--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna Recipe</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="recipes/fried_chicken.html">Fried Chicken Recipe</a></li>
+            <li><a href="recipes/yakisoba_chicken.html">Yakisoba Chicken Recipe</a></li>
+        </ul> 
     </body>
 </html>
