--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="recipes">
             <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-            <li><a href="recipes/fried_chicken.html">Fried Chicken Recipe</a></li>
-            <li><a href="recipes/yakisoba_chicken.html">Yakisoba Chicken Recipe</a></li>
+            <li id="fried_chicken"><a href="recipes/fried_chicken.html">Fried Chicken Recipe</a></li>
+            <li id="yakisoba_chicken"><a href="recipes/yakisoba_chicken.html">Yakisoba Chicken Recipe</a></li>
         </ul> 
     </body>
 </html>
